--- a/index.html
+++ b/index.html
@@ -1,10 +1,212 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-  </head>
-  <body></body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=0.0" />
+		<title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+		<link rel="stylesheet" href="./fonts/fonts.css" />
+		<link rel="stylesheet" href="./styles/style.css" />
+	</head>
+	<body>
+		<header class="header">
+			<div class="container">
+				<nav class="nav header__nav">
+					<ul class="header__menu">
+						<li class="header__menu-list header_menu-list_active">
+							<a class="header__menu-link">главная</a>
+						</li>
+						<li class="header__menu-list">
+							<a href="#" class="header__menu-link">посмотреть лоты</a>
+						</li>
+						<li class="header__menu-list">
+							<a href="#" class="header__menu-link">об аукционе</a>
+						</li>
+					</ul>
+					<a class="header__logo">
+						<img src="./images/logo-black.svg" alt="Логотип" />
+					</a>
+					<address class="address header__contacts">
+						<a href="tel:+99995555555" class="header__contacts-number"
+							>+9 999 555 5555</a
+						>
+						<a href="mailto:info@sobaka.ge" class="header__contacts-mail"
+							>info@sobaka.ge</a
+						>
+						<a class="header__contacts-address"
+							>наб. Принсенграхт 263-265, Амстердам</a
+						>
+					</address>
+				</nav>
+			</div>
+		</header>
+		<main>
+			<section class="cover">
+				<div class="container container__cover">
+					<h1 class="title">
+						<p class="title_line">о<span class="title_span">но</span></p>
+						<p class="title_line title_line-center">
+							те<span class="title_span">бе</span>
+						</p>
+						<p class="title_line title_line-right">
+							н<span class="title_span-right">ад</span
+							><span class="title_span title_span-o">о</span>
+						</p>
+					</h1>
+					<div class="cover__bottom">
+						<span class="cover__text"
+							>Аукцион вещей, в которые никто не верил</span
+						>
+						<button class="cover__button">
+							<span class="cover__button-text">Сделать ставку</span>
+						</button>
+					</div>
+				</div>
+				<div class="overlay cover__overlay"></div>
+			</section>
+			<section class="lots">
+				<div class="container">
+					<h2 class="heading heading__lots">Лоты</h2>
+					<nav class="lots__card-list">
+						<ul class="lots__card-list-item">
+							<li class="lot-card card_type_film">
+								<a href="#0" class="lot-card-link">
+									<h3 class="card__title">
+										Фильм режиссёра, который бросил киношколу
+									</h3>
+									<p class="text__lot-card">
+										Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+										ставка, если бы вы не знали, что режиссёр — Пол Томас
+										Андерсон?
+									</p>
+								</a>
+								<div class="overlay lots__overlay"></div>
+							</li>
+							<li class="lot-card card_type_book">
+								<a href="#0" class="lot-card-link">
+									<h3 class="card__title">
+										Книга, где описан один скучный день из жизни рекламного
+										агента
+									</h3>
+									<p class="text__lot-card">
+										Объёмом почти в тысячу страниц. Иногда без знаков препинания
+										и с переходами на древнеанглийский. В ней одновременно
+										рассказывается о 16 июня 1904 года и об истории литературы,
+										начиная с античных времён. И это всё накладывается на
+										эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+										Джеймса Джойса?
+									</p>
+								</a>
+								<div class="overlay lots__overlay"></div>
+							</li>
+							<li class="lot-card card_type_picture">
+								<a href="#0" class="lot-card-link">
+									<h3 class="card__title">
+										Картина, которую повторит даже 5-летний сын маминой подруги
+									</h3>
+									<p class="text__lot-card">
+										Ну действительно, там линия, тут кружочек, а здесь и вовсе
+										что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+										котиков… Сколько бы вы на такое поставили, если бы не знали,
+										что это — одна из революционных работ Кандинского?
+									</p>
+								</a>
+								<div class="overlay lots__overlay"></div>
+							</li>
+						</ul>
+					</nav>
+					<a href="#0" class="more-lots">посмотреть больше</a>
+				</div>
+			</section>
+			<section class="about">
+				<div class="container">
+					<div class="about__column">
+						<div class="about__logo">
+							<img
+								class="about__logo-image"
+								src="./images/logo-white.svg"
+								alt="Логотип"
+							/>
+						</div>
+						<h2 class="heading heading-about">Об аукционе</h2>
+						<div class="about__text">
+							<p>
+								Здесь вы не встретите очередное пафосное собрание невероятно
+								дорогого антиквариата. Наши лоты вообще не должны были попасть
+								ни на один аукцион. Потому что кому нужен дневник
+								девочки-подростка или картина, которую может нарисовать даже
+								ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+							</p>
+							<p>
+								Слишком сложные или, наоборот, слишком простые. Опережающие своё
+								время. В пух и прах растерзанные критиками. Непринятые и
+								непонятые. Когда-то они казались просто неудачными. Но, несмотря
+								на критику, кажущуюся простоту или сложность, сейчас без этих
+								лотов невозможно представить современную культуру. Когда в эти
+								вещи не верил никто, продолжали верить их создатели. И сейчас
+								эти лоты стали культовыми.
+							</p>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
+		<footer class="footer">
+			<div class="container">
+				<nav class="nav footer__nav">
+					<address class="address footer__contacts">
+						<a href="tel:+99995555555" class="footer__contacts-number"
+							>+9 999 555 5555</a
+						>
+						<a href="mailto:info@sobaka.ge" class="footer__contacts-mail"
+							>info@sobaka.ge</a
+						>
+						<a class="footer__contacts-address"
+							>наб. Принсенграхт 263-265, Амстердам</a
+						>
+					</address>
+					<ul class="footer__menu">
+						<li class="footer__menu-list">
+							<a href="#" class="footer__menu-link">главная</a>
+						</li>
+						<li class="footer__menu-list">
+							<a href="#0" class="footer__menu-link">посмотреть лоты</a>
+						</li>
+						<li class="footer__menu-list">
+							<a href="#0" class="footer__menu-link">об аукционе</a>
+						</li>
+					</ul>
+					<ul class="footer__social-list">
+						<li class="footer__social-list-item">
+							<a href="#0" class="footer__social-link">
+								<img
+									class="footer__social-icon"
+									src="./images/yt.svg"
+									alt="ссылка на YouTube"
+								/>
+							</a>
+						</li>
+						<li class="footer__social-list-item">
+							<a href="#0" class="footer__social-link">
+								<img
+									class="footer__social-icon"
+									src="./images/vk.svg"
+									alt="ссылка на VK"
+								/>
+							</a>
+						</li>
+						<li class="footer__social-list-item">
+							<a href="#0" class="footer__social-link">
+								<img
+									class="footer__social-icon"
+									src="./images/pinterest.svg"
+									alt="ссылка на Pinterest"
+								/>
+							</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</footer>
+	</body>
 </html>
