--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
 						<p class="title_line title_line-center">
 							те<span class="title_span">бе</span>
 						</p>
-						<p class="title_line title_line-right">
-							н<span class="title_span-right">ад</span
+						<p class="title_line title_line-right">н<span class="title_span-right">ад</span
 							><span class="title_span title_span-o">о</span>
 						</p>
 					</h1>
@@ -57,9 +56,7 @@
 						<span class="cover__text"
 							>Аукцион вещей, в которые никто не верил</span
 						>
-						<button class="cover__button">
-							<span class="cover__button-text">Сделать ставку</span>
-						</button>
+						<button class="cover__bet-button">Сделать ставку</button>
 					</div>
 				</div>
 				<div class="overlay cover__overlay"></div>
