--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 			<section class="cover">
 				<div class="container container__cover">
 					<h1 class="title">
-						<p class="title_line">о<span class="title_span">но</span></p>
-						<p class="title_line title_line-center">
+						<span class="title_line">о<span class="title_span">но</span></span>
+						<span class="title_line title_line-center">
 							те<span class="title_span">бе</span>
-						</p>
-						<p class="title_line title_line-right">н<span class="title_span-right">ад</span
+						</span>
+						<span class="title_line title_line-right">н<span class="title_span-right">ад</span
 							><span class="title_span title_span-o">о</span>
-						</p>
+						</span>
 					</h1>
 					<div class="cover__bottom">
 						<span class="cover__text"
