--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=0.0" />
 		<title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
 		<link rel="stylesheet" href="./fonts/fonts.css" />
-		<link rel="stylesheet" href="./styles/style.css" />
 		<link rel="stylesheet" href="./styles/global.css" />
+		<link rel="stylesheet" href="./styles/style.css" />
 	</head>
 	<body>
 		<header class="header">
 			<div class="container">
 				<nav class="box">
 					<ul class="header__menu">
-						<li class="header__menu-list header_menu-list_active">
+						<li class="header__menu-list header__list_no-bullit">
 							<a class="header__menu-link">главная</a>
 						</li>
 						<li class="header__menu-list">
@@ -160,14 +160,14 @@
 						<a href="mailto:info@sobaka.ge" class="footer__contacts-mail"
 							>info@sobaka.ge</a
 						>
-						<a class="footer__contacts-address">
-							<p>наб. Принсенграхт 263-265, Амстердам</p>
-						</a>
+						<p class="footer__contacts-address">
+							наб. Принсенграхт 263-265, Амстердам
+						</p>
 					</address>
 					<nav class="footer__menu">
 						<ul class="footer__menu">
 							<li class="footer__menu-list">
-								<a href="#" class="footer__menu-link">главная</a>
+								<a class="footer__menu-link">главная</a>
 							</li>
 							<li class="footer__menu-list">
 								<a href="#0" class="footer__menu-link">посмотреть лоты</a>
