--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=0.0" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
 		<link rel="stylesheet" href="./fonts/fonts.css" />
 		<link rel="stylesheet" href="./styles/global.css" />
@@ -15,7 +15,7 @@
 				<nav class="box">
 					<ul class="header__menu">
 						<li class="header__menu-list header__list_no-bullit">
-							<a class="header__menu-link">главная</a>
+							<a class="header__menu-link link_no-underline">главная</a>
 						</li>
 						<li class="header__menu-list">
 							<a href="#" class="header__menu-link">посмотреть лоты</a>
@@ -34,9 +34,9 @@
 						<a href="mailto:info@sobaka.ge" class="header__contacts-mail"
 							>info@sobaka.ge</a
 						>
-						<a class="header__contacts-address">
-							<p>наб. Принсенграхт 263-265, Амстердам</p>
-						</a>
+						<p class="header__contacts-address">
+							наб. Принсенграхт 263-265, Амстердам
+						</p>
 					</address>
 				</nav>
 			</div>
@@ -167,7 +167,7 @@
 					<nav class="footer__menu">
 						<ul class="footer__menu">
 							<li class="footer__menu-list">
-								<a class="footer__menu-link">главная</a>
+								<a class="footer__menu-link link_no-underline">главная</a>
 							</li>
 							<li class="footer__menu-list">
 								<a href="#0" class="footer__menu-link">посмотреть лоты</a>
